removed candidatesGroup, reverted to project.

--- a/conf/initial-data.yml
+++ b/conf/initial-data.yml
@@ -62,9 +62,9 @@ users:
     
 # Projects
 
-matches_groups:
+projects:
 
-    - !!models.candidatesGroup
+    - !!models.Project
         id:         1
         name:       Play 2.0   
         folder:     Play framework
