--- a/conf/initial-data.yml
+++ b/conf/initial-data.yml
@@ -8,57 +8,68 @@ users:
         email:      edilbert@sample.com
         name:       Eric Dilbert
         password:   secret
+        image:      "public/images/users/penny.jpg"
     
 #demo matches female 1 to 10
     - !!models.User
         email:      acooper@sample.com
         name:       Alice Cooper
         password:   secret
+        image:      "public/images/users/penny.jpg"
     
     - !!models.User
         email:      laldridge@sample.com
         name:       Lily Aldridge
         password:   secret
+        image:      "public/images/users/penny.jpg"
     
     - !!models.User
         email:      mandersen@sample.com
         name:       May Andersen
         password:   secret
+        image:      "public/images/users/penny.jpg"
 
     - !!models.User
         email:      tbanks@sample.com
         name:       Tyra Banks
         password:   secret
+        image:      "public/images/users/penny.jpg"
 
     - !!models.User
         email:      ccampbell@sample.com
         name:       Carla Campbell
         password:   secret
+        image:      "public/images/users/penny.jpg"
 
     - !!models.User
         email:      rclark@sample.com
         name:       Rachel Clark
         password:   secret
+        image:      "public/images/users/penny.jpg"
 
     - !!models.User
         email:      ddriegen@sample.com
         name:       Dewi Driegen
         password:   secret
+        image:      "public/images/users/penny.jpg"
 
     - !!models.User
         email:      eheming@sample.com
         name:       Emma Heming
         password:   secret
+        image:      "public/images/users/penny.jpg"
 
     - !!models.User
         email:      kkloss@sample.com
         name:       Karlie Kloss
         password:   secret
+        image:      "public/images/users/penny.jpg"
 
     - !!models.User
         email:      alima@sample.com
         name:       Adriana Lima
         password:   secret
+        image:      "public/images/users/penny.jpg"
     
 # Projects
 
