--- a/conf/initial-data.yml
+++ b/conf/initial-data.yml
@@ -10,8 +10,8 @@ users:
         password:   secret
         image:      "/assets/images/users/original/edilbert2.jpg"
         age:        27
-        location:   Atlanta
-        hometown:	Atlanta
+        location:   Atlanta, GA
+        hometown:   Chicago, IL
         occupation: Student
         description: I love Star Wars, Star Trek and Chocolate
     
@@ -22,8 +22,8 @@ users:
         password:   secret
         image:      "/assets/images/users/original/mkerr.jpg"
         age:        29
-        location:   Atlanta
-        hometown:	Atlanta
+        location:   Atlanta, GA
+        hometown:   Atlanta, GA
         occupation: Student
         description: I love Star Wars, Star Trek and Chocolate
     
@@ -33,8 +33,8 @@ users:
         password:   secret
         image:      "/assets/images/users/original/laldridge.jpg"
         age:        26
-        location:   Atlanta
-        hometown:	Atlanta
+        location:   Atlanta, GA
+        hometown:   Atlanta, GA
         occupation: Student
         description: I love Star Wars, Star Trek and Chocolate
     
@@ -44,8 +44,8 @@ users:
         password:   secret
         image:      "/assets/images/users/original/eheatherton.jpg"
         age:        23
-        location:   Atlanta
-        hometown:	Atlanta
+        location:   Atlanta, GA
+        hometown:   Atlanta, GA
         occupation: Student
         description: I love Star Wars, Star Trek and Chocolate
 
@@ -55,8 +55,8 @@ users:
         password:   secret
         image:      "/assets/images/users/original/aambrosio.jpg"
         age:        31
-        location:   Atlanta
-        hometown:	Atlanta
+        location:   Atlanta, GA
+        hometown:   Atlanta, GA
         occupation: Student
         description: I love Star Wars, Star Trek and Chocolate
 
@@ -66,8 +66,8 @@ users:
         password:   secret
         image:      "/assets/images/users/original/ccampbell.jpg"
         age:        31
-        location:   Atlanta
-        hometown:	Atlanta
+        location:   Atlanta, GA
+        hometown:   Atlanta, GA
         occupation: Student
         description: I love Star Wars, Star Trek and Chocolate
 
@@ -77,8 +77,8 @@ users:
         password:   secret
         image:      "/assets/images/users/original/rclark.jpg"
         age:        23
-        location:   Atlanta
-        hometown:	Atlanta
+        location:   Atlanta, GA
+        hometown:   Atlanta, GA
         occupation: Student
         description: I love Star Wars, Star Trek and Chocolate
 
@@ -88,8 +88,8 @@ users:
         password:   secret
         image:      "/assets/images/users/original/ddriegen.jpg"
         age:        30
-        location:   Atlanta
-        hometown:	Atlanta
+        location:   Atlanta, GA
+        hometown:   Atlanta, GA
         occupation: Student
         description: I love Star Wars, Star Trek and Chocolate
 
@@ -99,8 +99,8 @@ users:
         password:   secret
         image:      "/assets/images/users/original/eheming.jpg"
         age:        34
-        location:   Atlanta
-        hometown:	Atlanta
+        location:   Atlanta, GA
+        hometown:   Atlanta, GA
         occupation: Student
         description: I love Star Wars, Star Trek and Chocolate
 
@@ -110,8 +110,8 @@ users:
         password:   secret
         image:      "/assets/images/users/original/kkloss.jpg"
         age:        20
-        location:   Atlanta
-        hometown:	Atlanta
+        location:   Atlanta, GA
+        hometown:   Atlanta, GA
         occupation: Student
         description: I love Star Wars, Star Trek and Chocolate
 
@@ -121,8 +121,8 @@ users:
         password:   secret
         image:      "/assets/images/users/original/alima.jpg"
         age:        31
-        location:   Atlanta
-        hometown:	Atlanta
+        location:   Atlanta, GA
+        hometown:   Atlanta, GA
         occupation: Student
         description: I love Star Wars, Star Trek and Chocolate
     
